# AI_Adoption_Diff_Tool

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
ai_adoption_diff/: __init__.py  cli.py
ai_adoption_diff/analysis/: __init__.py  anchor.py  confidence.py  heuristic.py  partitioner.py
ai_adoption_diff/ingestion/: __init__.py  git_reader.py  github.py
ai_adoption_diff/metrics/: churn.py  commit_size.py  hot_files.py  test_ratio.py
ai_adoption_diff/report/: json_export.py  model.py  renderer.py
ai_adoption_diff/shared/: __init__.py  config.py  tracing.py
docs/: ARCHITECTURE.md  CODEX_PROMPT.md  IMPLEMENTATION_CONTRACT.md  PROJECT_BRIEF.md  VISUALIZATION_PLAN.md  hooks_log.txt  spec.md  tasks.md
docs/archive/: PHASE1_REVIEW.md  PHASE2_REVIEW.md  PHASE3_REVIEW.md  PHASE4_REVIEW.md  PHASE5_REVIEW.md
docs/audit/: ARCH_REPORT.md  AUDIT_INDEX.md  META_ANALYSIS.md  PHASE1_AUDIT.md  PHASE_REPORT_LATEST.md  PROMPT_0_META.md  PROMPT_1_ARCH.md  PROMPT_2_CODE.md  PROMPT_3_CONSOLIDATED.md  STRATEGY_NOTE.md
docs/prompts/: ORCHESTRATOR.md  PROMPT_S_STRATEGY.md
tests/: conftest.py
tests/integration/: test_cli_end_to_end.py  test_git_reader.py
tests/unit/: test_anchor.py  test_ci.py  test_confidence.py  test_git_reader_unit.py  test_github.py  test_heuristic.py  test_json_export.py  test_metrics_churn.py  test_metrics_commit_size.py  test_metrics_hot_files.py  test_metrics_test_ratio.py  test_partitioner.py  test_renderer.py  test_report_model.py  test_skeleton.py  test_smoke.py
(+2 files in other folders)
