[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-adoption-diff-tool"
version = "0.1.0"
description = "Deterministic CLI for analyzing repository changes around AI coding tool adoption."
readme = "docs/PROJECT_BRIEF.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "structlog",
    "pydantic",
    "jinja2",
    "httpx",
]

[project.scripts]
ai-diff = "ai_adoption_diff.cli:cli"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["ai_adoption_diff*"]

[tool.ruff]
target-version = "py311"
line-length = 100
